@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2022 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import java.beans.Introspector;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.StringWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -33,8 +32,6 @@ import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamReader;
 import javax.xml.stream.util.StreamReaderDelegate;
 
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.api.Response;
@@ -169,27 +166,22 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
     @Override
     protected void internalSendCommand(String command) {
         logger.debug("Sending command '{}'", command);
-        if (StringUtils.isBlank(command)) {
+        if (command == null || command.isBlank()) {
             logger.warn("Trying to send empty command");
             return;
         }
 
-        try {
-            String url = cmdUrl + URLEncoder.encode(command, Charset.defaultCharset().displayName());
-            logger.trace("Calling url {}", url);
+        String url = cmdUrl + URLEncoder.encode(command, Charset.defaultCharset());
+        logger.trace("Calling url {}", url);
 
-            httpClient.newRequest(url).timeout(5, TimeUnit.SECONDS).send(new Response.CompleteListener() {
-                @Override
-                public void onComplete(Result result) {
-                    if (result.getResponse().getStatus() != 200) {
-                        logger.warn("Error {} while sending command", result.getResponse().getReason());
-                    }
+        httpClient.newRequest(url).timeout(5, TimeUnit.SECONDS).send(new Response.CompleteListener() {
+            @Override
+            public void onComplete(Result result) {
+                if (result.getResponse().getStatus() != 200) {
+                    logger.warn("Error {} while sending command", result.getResponse().getReason());
                 }
-            });
-
-        } catch (UnsupportedEncodingException e) {
-            logger.warn("Error sending command", e);
-        }
+            }
+        });
     }
 
     private void updateMain() throws IOException {
@@ -306,10 +298,13 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
             String result = HttpUtil.executeUrl("GET", uri, REQUEST_TIMEOUT_MS);
             logger.trace("result of getDocument for uri '{}':\r\n{}", uri, result);
 
-            if (StringUtils.isNotBlank(result)) {
+            if (result != null && !result.isBlank()) {
                 JAXBContext jc = JAXBContext.newInstance(response);
                 XMLInputFactory xif = XMLInputFactory.newInstance();
-                XMLStreamReader xsr = xif.createXMLStreamReader(IOUtils.toInputStream(result));
+                xif.setProperty(XMLInputFactory.IS_SUPPORTING_EXTERNAL_ENTITIES, false);
+                xif.setProperty(XMLInputFactory.SUPPORT_DTD, false);
+                XMLStreamReader xsr = xif
+                        .createXMLStreamReader(new ByteArrayInputStream(result.getBytes(StandardCharsets.UTF_8)));
                 xsr = new PropertyRenamerDelegate(xsr);
 
                 @SuppressWarnings("unchecked")
@@ -339,11 +334,12 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
             ByteArrayInputStream inputStream = new ByteArrayInputStream(sw.toString().getBytes(StandardCharsets.UTF_8));
             String result = HttpUtil.executeUrl("POST", uri, inputStream, CONTENT_TYPE_XML, REQUEST_TIMEOUT_MS);
 
-            if (StringUtils.isNotBlank(result)) {
+            if (result != null && !result.isBlank()) {
                 JAXBContext jcResponse = JAXBContext.newInstance(response);
 
                 @SuppressWarnings("unchecked")
-                T obj = (T) jcResponse.createUnmarshaller().unmarshal(IOUtils.toInputStream(result));
+                T obj = (T) jcResponse.createUnmarshaller()
+                        .unmarshal(new ByteArrayInputStream(result.getBytes(StandardCharsets.UTF_8)));
 
                 return obj;
             }
@@ -362,12 +358,12 @@ public class DenonMarantzHttpConnector extends DenonMarantzConnector {
 
         @Override
         public String getAttributeLocalName(int index) {
-            return Introspector.decapitalize(super.getAttributeLocalName(index));
+            return Introspector.decapitalize(super.getAttributeLocalName(index)).intern();
         }
 
         @Override
         public String getLocalName() {
-            return Introspector.decapitalize(super.getLocalName());
+            return Introspector.decapitalize(super.getLocalName()).intern();
         }
     }
 }
