@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2022 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,7 +15,6 @@ package org.openhab.binding.freebox.internal.api;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
@@ -121,7 +120,8 @@ public class FreeboxApiManager {
         }
     }
 
-    public boolean authorize(boolean useHttps, String fqdn, String apiBaseUrl, String apiVersion, String appToken) {
+    public boolean authorize(boolean useHttps, String fqdn, String apiBaseUrl, String apiVersion, String appToken)
+            throws InterruptedException {
         String[] versionSplit = apiVersion.split("\\.");
         String majorVersion = "5";
         if (versionSplit.length > 0) {
@@ -155,7 +155,7 @@ public class FreeboxApiManager {
             this.appToken = token;
             openSession();
             return true;
-        } catch (FreeboxException | InterruptedException e) {
+        } catch (FreeboxException e) {
             logger.debug("Error while opening a session", e);
             return false;
         }
@@ -469,11 +469,7 @@ public class FreeboxApiManager {
     }
 
     private String encodeUrl(String url) throws FreeboxException {
-        try {
-            return URLEncoder.encode(url, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            throw new FreeboxException("Encoding the URL \"" + url + "\" in UTF-8 failed", e);
-        }
+        return URLEncoder.encode(url, StandardCharsets.UTF_8);
     }
 
     public static String hmacSha1(String key, String value) throws FreeboxException {
